Some 'few' results

--- a/kmeans/index.html
+++ b/kmeans/index.html
@@ -20,6 +20,12 @@
     <script src="data/common_rp.js"></script>
     <script src="data/common_sc.js"></script>
     <script src="data/common_sp.js"></script>
+    <script src="data/few_ec.js"></script>
+    <script src="data/few_ep.js"></script>
+    <script src="data/few_rc.js"></script>
+    <script src="data/few_rp.js"></script>
+    <script src="data/few_sc.js"></script>
+    <script src="data/few_sp.js"></script>
     <script src="data/railway_ec.js"></script>
     <script src="data/railway_ep.js"></script>
     <script src="data/railway_rc.js"></script>
@@ -71,12 +77,19 @@
           title="Railway test"
         >Rw</button>
       </li>
-      <li class="last" id="rivli">
+      <li id="rivli">
         <button
           id="rivbt"
           onClick="change('river')"
           title="River test"
         >Rv</button>
+      </li>
+      <li class="last" id="fewli">
+        <button
+          id="fewbt"
+          onClick="change('few')"
+          title="Few test"
+        >Fw</button>
       </li>
     </ul>
     <div id="TARDIS">
