[add] Euclid full data

--- a/kmeans/index.html
+++ b/kmeans/index.html
@@ -26,6 +26,10 @@
     <script src="data/few_rp.js"></script>
     <script src="data/few_sc.js"></script>
     <script src="data/few_sp.js"></script>
+    <script src="data/full_ec.js"></script>
+    <script src="data/full_ep.js"></script>
+    <script src="data/full_sc.js"></script>
+    <script src="data/full_sp.js"></script>
     <script src="data/railway_ec.js"></script>
     <script src="data/railway_ep.js"></script>
     <script src="data/railway_rc.js"></script>
@@ -84,12 +88,19 @@
           title="River test"
         >Rv</button>
       </li>
-      <li class="last" id="fewli">
+      <li id="fewli">
         <button
           id="fewbt"
           onClick="change('few')"
           title="Few test"
         >Fw</button>
+      </li>
+      <li class="last" id="fulli">
+        <button
+          id="fulbt"
+          onClick="change('full')"
+          title="Full test"
+        >Fl</button>
       </li>
     </ul>
     <div id="TARDIS">
