[add] results with locations

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <div id="main">
                 <span>Visualizations of main scripts' output:</span>
                 <ul class="links">
-                    <li><a href="/clustering/kmeans">Clustering (three little tests)</a></li>
+                    <li><a href="/clustering/kmeans">Clustering</a></li>
+                    <li><a href="/clustering/stations">Clustering with location to roadmap network</a></li>
                     <li><a href="/clustering/with_triangle">Clustering with using triangle inequality</a></li>
                     <li><a href="/clustering/cluster">[OLD] Clustering</a></li>
                 </ul>
