--- a/gen-lines/index.html
+++ b/gen-lines/index.html
@@ -7,8 +7,8 @@
     </script>
     <link rel='stylesheet'
       href='http://cdn.leafletjs.com/leaflet-0.7/leaflet.css' />
-    <link rel='stylesheet' type='text/css' 
-      href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' />
+    <link rel='stylesheet' type='text/css'
+      href='https://fonts.googleapis.com/css?family=PT+Sans:400,700' />
     <script src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js" onerror="script_error()"></script>
     <script src="https://rawgit.com/bbecquet/Leaflet.PolylineDecorator/master/src/L.Symbol.js" onerror="script_error()"></script>
     <script src="https://rawgit.com/bbecquet/Leaflet.PolylineDecorator/master/src/L.PolylineDecorator.js" onerror="script_error()"></script>
