--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <span>Visualizations of main scripts' output:</span>
                 <ul class="links">
                     <li><a href="/clustering/kmeans">Clustering</a></li>
-                    <li><a href="/clustering/stations">Clustering with location to roadmap network</a></li>
+                    <li><a href="/clustering/terminals">Clustering with location to roadmap network</a></li>
                     <li><a href="/clustering/with_triangle">Clustering with using triangle inequality</a></li>
                     <li><a href="/clustering/cluster">[OLD] Clustering</a></li>
                 </ul>
