--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="style.css" />
+        <link rel="icon" type="image/x-icon" href="http://vstu-cad-stuff.github.io/half-gear.ico">
     </head>
     <body>
         <div id="path">
