--- a/gen/index.html
+++ b/gen/index.html
@@ -15,6 +15,7 @@
     <script src="https://rawgit.com/bbecquet/Leaflet.PolylineDecorator/master/src/L.LineUtil.PolylineDecorator.js" onerror="script_error()"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../main.css" />
+    <link rel="icon" type="image/x-icon" href="http://vstu-cad-stuff.github.io/half-gear.ico">
   </head>
   <body>
     <div id="map"></div>
