--- a/with_triangle/index.html
+++ b/with_triangle/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../main.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="http://vstu-cad-stuff.github.io/half-gear.ico">
   </head>
   <body>
     <!------------------------------------------------>
