--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul class="references">
                 <li><a href="https://github.com/vstu-cad-stuff">VSTU-CAD-stuff</a>:</li>
                 <li><a href="https://github.com/FreeCX">Golubev Alexey</a>,</li>
-                <li><a href="https://github.com/DSKarramba">Chechetkin Ilya</a>.</li>
+                <li><a href="https://github.com/Illaech">Chechetkin Ilya</a>.</li>
                 <li>Project "<a href="https://github.com/vstu-cad-stuff/clustering">Clustering</a>".</li>
             </ul>
             <span>Volgograd, 2016</span>
