--- a/kmeans/index.html
+++ b/kmeans/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>An example of k-means work</title>
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.0/leaflet.css" integrity="sha512-frwe9LhYfUEW6OPPCXCngaeZ9LqQsvw+HG/kGBcJMby9wGIKNaBieEF8r9sO4b4lJah0OF2tV1iF8q6uymC00w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
-    <script src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.0/leaflet.js" integrity="sha512-hfzaiL70AJeDq+4kI823i/wExm+OlOCQucA1YEuAvZamTqddR7Uz+F2ZWro3G59t0H9lfPCueglNvjczH4Rx8A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../main.css" />
     <link rel="stylesheet" href="style.css" />
