--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li><a href="https://github.com/Illaech">Chechetkin Ilya</a>.</li>
                 <li>Project "<a href="https://github.com/vstu-cad-stuff/clustering">Clustering</a>".</li>
             </ul>
-            <span>Volgograd, 2016</span>
+            <span>Volgograd, 2016 - now</span>
         </div>
     </body>
 </html>
